2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (drop_video_cb), (drop_playlist_cb),
	(drag_motion_playlist_cb), (totem_callback_connect):
	Make "ask" drag'n'drop work on the sidebar button as well

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/eggfileformatchooser.[ch]: Add the EggFileFormatChooser
	from bug 440431
	* src/totem-playlist.c (totem_playlist_save_playlist),
	(suffix_match_replace), (format_selection_changed),
	(totem_playlist_save_add_format_chooser),
	(totem_playlist_save_files): Use a better file format chooser,
	- if the extension isn't known, use "PLS"
	- when changing the file type, change the prefix of the saved file
	(Closes: #379608)

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (drop_video_cb): Only show the "Add to playlist"
	menu item on drop when the playlist isn't empty

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_add_to_playlist_and_play),
	(totem_get_playlist_length):
	* src/totem-playlist.c (totem_playlist_get_current),
	(totem_playlist_get_last):
	* src/totem-playlist.h:
	* src/totem-session.c (totem_save_state_cb):
	* src/totem.h: Fix totem_playlist_get_current() and
	totem_playlist_get_last() returning negative values
	(Closes: #563961)

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/totem-dnd-menu.[ch]:
	* src/totem-playlist.c (drop_cb):
	* src/totem.c (drop_video_cb), (drag_motion_video_cb):
	Patch from Maxim Ermilov <zaspire@rambler.ru> to allow
	"ask" drag'n'drop on the treeview and the video widget
	(Closes: #563252)

2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/tracker/totem-tracker-widget.c:
	Fix building with newer versions of tracker (Closes: #563706)

2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/totem.defs:
	* src/plugins/properties/totem-movie-properties.c
	(totem_movie_properties_plugin_metadata_updated):
	* src/totem-object.c (totem_object_class_init),